# OptiSpec

./: .gitignore  README.md  pyproject.toml
optispec/: hamiltonian.py  test.py  utils.py
optispec/models/: base.py  mlj.py  three_state.py  two_state.py
optispec/temp/: absorption.py  test.py
tests/: test_hamiltonian.py  test_hamiltonian_blocks.py  test_hamiltonian_full.py  test_mlj.py  test_stark.py  test_two_state.py
tests/data/: __init__.py  hamiltonian.py  load.py  mlj.py  stark.py  two_state.py
tests/data/csv/hamiltonian/: matrix:t=100;e=0,8000;bs=9,10;f=1200,100;c=0p7,2.csv  vals:t=100;e=0,8000;bs=9,10;f=1200,100;c=0p7,2.csv  vects:t=100;e=0,8000;bs=9,10;f=1200,100;c=0p7,2.csv
tests/data/csv/mlj/: absorption-intensities:points=0,20k,2001;temp=300;e=8k;d=0;bs=20,f=1200,100;c=0p7,2.csv
tests/data/csv/stark/: absorption-intensities:model=twostate;points=0,20k,2001;temp=300;broad=200;t=100;e=8k;bs=20,200;f=1200,100;c=0p7,2;field=0p01;percent=0p5;delta_d=38;delta_p=1000.csv
tests/data/csv/two_state/: absorption-intensities-fortran:points=0,20k,2001;temp=300;broad=200;t=100;e=8k;bs=20;50,f=1200,100;c=0p7,2.csv  absorption-intensities:points=0,20k,2001;temp=300;broad=200;t=100;e=8k;bs=20;50,f=1200,100;c=0p7,2.csv  absorption:points=0,20k,2001;temp=300;broad=200;t=100;e=8k;bs=20;50,f=1200,100;c=0p7,2.csv  fortran-code.f90
